bugfix: show public events